remove test lines

--- a/06_download_flatfiles.ipynb
+++ b/06_download_flatfiles.ipynb
@@ -127,23 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-05-09 12:43:46.688066 | 2022-10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for year in range(2003, 2024+1):\n",
     "    files = []\n",
     "    for month in range(1, 12+1):\n",
-    "        if not (year == 2022 and month == 10):\n",
-    "            continue\n",
     "        print(f'{datetime.now()} | {year}-{month}')\n",
     "        if not os.path.isfile(DATA_PATH + f\"raw/flatfiles/{year}-{month}.parquet\"):\n",
     "            continue\n",
@@ -152,15 +142,12 @@
     "        all_bars = all_bars[~all_bars.index.isna()]\n",
     "\n",
     "        if all_bars['datetime'].min().year != year or all_bars['datetime'].min().month != month:\n",
-    "            all_bars = all_bars[(all_bars['datetime'].dt.month == month) & (all_bars['datetime'].dt.year == year)]\n",
-    "            print(f'{year} | {month} HAS OUT OF BOUND DATES')\n",
+    "            raise Exception(f'{year} | {month} HAS OUT OF BOUND DATES')\n",
     "\n",
     "        # File names are case insensitive! This lead to big data errors (e.g. TpC and TPC are merged)\n",
     "        # So we simply remove all tickers that have small letters.\n",
     "        # Which we don't need anyways, because small letter = non-common stock.\n",
     "        for ticker in list(filter(lambda ticker: not any(s.islower() for s in ticker), list(all_bars.index.unique()))):\n",
-    "            if not (ticker == 'TPC'):\n",
-    "                continue\n",
     "            bars = all_bars.loc[ticker]\n",
     "            if isinstance(bars, pd.Series):\n",
     "                bars = all_bars.loc[[ticker]]\n",
@@ -185,331 +172,6 @@
     "The old version of the above code runs very fast, up to end 2022. Then it becomes 20-50x slower. I found the problem:\n",
     "\n",
     "Pandas dataframe lookup uses hash-tables so the time complexity is O(1). However, if you have null values in the index this does not apply anymore! The bars from end 2022 and upwards have null values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_bars = pd.read_parquet(DATA_PATH + f\"raw/flatfiles/2022-10.parquet\")\n",
-    "all_bars = all_bars[~all_bars.index.isna()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ticker</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>DFEN</th>\n",
-       "      <td>2022-10-27 15:10:00</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0100</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0100</td>\n",
-       "      <td>2192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PCY</th>\n",
-       "      <td>2022-10-10 10:13:00</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0100</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0100</td>\n",
-       "      <td>1154</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SBNYP</th>\n",
-       "      <td>2022-10-17 12:15:00</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SH</th>\n",
-       "      <td>2022-10-07 14:43:00</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0094</td>\n",
-       "      <td>17.0000</td>\n",
-       "      <td>17.0094</td>\n",
-       "      <td>16862</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TpC</th>\n",
-       "      <td>2022-10-19 15:59:00</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0300</td>\n",
-       "      <td>16.9700</td>\n",
-       "      <td>16.9700</td>\n",
-       "      <td>7230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZHDG</th>\n",
-       "      <td>2022-10-31 10:19:00</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>17.0012</td>\n",
-       "      <td>1765</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  datetime     open     high      low    close  volume\n",
-       "ticker                                                                \n",
-       "DFEN   2022-10-27 15:10:00  17.0012  17.0100  17.0012  17.0100    2192\n",
-       "PCY    2022-10-10 10:13:00  17.0012  17.0100  17.0012  17.0100    1154\n",
-       "SBNYP  2022-10-17 12:15:00  17.0012  17.0012  17.0012  17.0012     100\n",
-       "SH     2022-10-07 14:43:00  17.0012  17.0094  17.0000  17.0094   16862\n",
-       "TpC    2022-10-19 15:59:00  17.0012  17.0300  16.9700  16.9700    7230\n",
-       "ZHDG   2022-10-31 10:19:00  17.0012  17.0012  17.0012  17.0012    1765"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_bars[all_bars['open'] == 17.0012]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TCP = all_bars.loc['TPC']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TCP = TCP.sort_values('datetime')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>open</th>\n",
-       "      <th>high</th>\n",
-       "      <th>low</th>\n",
-       "      <th>close</th>\n",
-       "      <th>volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ticker</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 09:30:00</td>\n",
-       "      <td>6.030</td>\n",
-       "      <td>6.03</td>\n",
-       "      <td>6.030</td>\n",
-       "      <td>6.03</td>\n",
-       "      <td>870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 09:31:00</td>\n",
-       "      <td>6.030</td>\n",
-       "      <td>6.03</td>\n",
-       "      <td>6.030</td>\n",
-       "      <td>6.03</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 09:35:00</td>\n",
-       "      <td>6.080</td>\n",
-       "      <td>6.08</td>\n",
-       "      <td>6.070</td>\n",
-       "      <td>6.08</td>\n",
-       "      <td>1207</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 09:37:00</td>\n",
-       "      <td>6.060</td>\n",
-       "      <td>6.06</td>\n",
-       "      <td>6.050</td>\n",
-       "      <td>6.05</td>\n",
-       "      <td>774</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 09:41:00</td>\n",
-       "      <td>6.020</td>\n",
-       "      <td>6.02</td>\n",
-       "      <td>6.010</td>\n",
-       "      <td>6.01</td>\n",
-       "      <td>608</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 15:57:00</td>\n",
-       "      <td>6.115</td>\n",
-       "      <td>6.13</td>\n",
-       "      <td>6.115</td>\n",
-       "      <td>6.13</td>\n",
-       "      <td>7624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 15:58:00</td>\n",
-       "      <td>6.130</td>\n",
-       "      <td>6.15</td>\n",
-       "      <td>6.130</td>\n",
-       "      <td>6.14</td>\n",
-       "      <td>9381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 15:59:00</td>\n",
-       "      <td>6.150</td>\n",
-       "      <td>6.15</td>\n",
-       "      <td>6.140</td>\n",
-       "      <td>6.14</td>\n",
-       "      <td>11743</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 16:00:00</td>\n",
-       "      <td>6.140</td>\n",
-       "      <td>6.14</td>\n",
-       "      <td>6.140</td>\n",
-       "      <td>6.14</td>\n",
-       "      <td>5543</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TPC</th>\n",
-       "      <td>2022-10-19 16:01:00</td>\n",
-       "      <td>6.140</td>\n",
-       "      <td>6.14</td>\n",
-       "      <td>6.140</td>\n",
-       "      <td>6.14</td>\n",
-       "      <td>4654</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>202 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  datetime   open  high    low  close  volume\n",
-       "ticker                                                       \n",
-       "TPC    2022-10-19 09:30:00  6.030  6.03  6.030   6.03     870\n",
-       "TPC    2022-10-19 09:31:00  6.030  6.03  6.030   6.03     101\n",
-       "TPC    2022-10-19 09:35:00  6.080  6.08  6.070   6.08    1207\n",
-       "TPC    2022-10-19 09:37:00  6.060  6.06  6.050   6.05     774\n",
-       "TPC    2022-10-19 09:41:00  6.020  6.02  6.010   6.01     608\n",
-       "...                    ...    ...   ...    ...    ...     ...\n",
-       "TPC    2022-10-19 15:57:00  6.115  6.13  6.115   6.13    7624\n",
-       "TPC    2022-10-19 15:58:00  6.130  6.15  6.130   6.14    9381\n",
-       "TPC    2022-10-19 15:59:00  6.150  6.15  6.140   6.14   11743\n",
-       "TPC    2022-10-19 16:00:00  6.140  6.14  6.140   6.14    5543\n",
-       "TPC    2022-10-19 16:01:00  6.140  6.14  6.140   6.14    4654\n",
-       "\n",
-       "[202 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TCP[TCP['datetime'].dt.date == date(2022, 10, 19)]"
    ]
   },
   {
