--- a/10_descriptive_data.ipynb
+++ b/10_descriptive_data.ipynb
@@ -41,7 +41,7 @@
     "    submission = edgar.get_submissions(int(cik))\n",
     "    tickers.loc[index, 'country'] = submission['addresses']['business']['stateOrCountry']\n",
     "    tickers.loc[index, 'sic'] = submission['sic']\n",
-    "    \n",
+    "     \n",
     "    if index % 100 == 0:\n",
     "        print(index)"
    ]
@@ -52,7 +52,7 @@
    "source": [
     "# Converting country codes to country.\n",
     "\n",
-    "There are also some old codes, these are 'E6', 'E7', 'I8', 'L4', 'L5', 'U2', 'US', 'a0', 'a1', 'ct', 'ny',\n",
+    "There are also some codes that do not match the code-country mapping, these are 'E6', 'E7', 'I8', 'L4', 'L5', 'U2', 'US', 'a0', 'a1', 'ct', 'ny',\n",
     "'pa', 'ut', 'wa'. Looking at the [SEC](https://www.sec.gov/edgar/searchedgar/edgarcompstate.htm), we will assign:\n",
     "* E6, E7, a0, a1: CANADA\n",
     "* I8: GERMANY\n",
