--- a/13_fundamentals_sharadar.ipynb
+++ b/13_fundamentals_sharadar.ipynb
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "fundamentals = pd.read_parquet('../data/other/sharadar_SF1.parquet')\n",
-    "fundamentals['datekey'] = pd.to_datetime(fundamentals['datekey']).dt.date\n"
+    "fundamentals['datekey'] = pd.to_datetime(fundamentals['datekey']).dt.date"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "2       IVP  1939365"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "2886167"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "276333"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,9 +198,11 @@
        "      <th>datekey</th>\n",
        "      <th>ticker</th>\n",
        "      <th>marketcap</th>\n",
+       "      <th>marketcap_M</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cik</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -212,32 +214,35 @@
        "      <td>2000-01-25</td>\n",
        "      <td>A</td>\n",
        "      <td>3.059588e+10</td>\n",
+       "      <td>30595.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1090872</th>\n",
        "      <td>2000-01-31</td>\n",
        "      <td>A</td>\n",
        "      <td>2.991788e+10</td>\n",
+       "      <td>29917.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1090872</th>\n",
        "      <td>2000-03-15</td>\n",
        "      <td>A</td>\n",
        "      <td>5.166360e+10</td>\n",
+       "      <td>51663.60</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            datekey ticker     marketcap\n",
-       "cik                                     \n",
-       "1090872  2000-01-25      A  3.059588e+10\n",
-       "1090872  2000-01-31      A  2.991788e+10\n",
-       "1090872  2000-03-15      A  5.166360e+10"
+       "            datekey ticker     marketcap  marketcap_M\n",
+       "cik                                                  \n",
+       "1090872  2000-01-25      A  3.059588e+10     30595.88\n",
+       "1090872  2000-01-31      A  2.991788e+10     29917.88\n",
+       "1090872  2000-03-15      A  5.166360e+10     51663.60"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,15 +311,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Amount of tickers: 17638\n",
-      "Amount of stocks with marketcap: 14334\n"
+      "Amount of tickers: 17661\n",
+      "Amount of stocks with marketcap: 14359\n"
      ]
     }
    ],
@@ -328,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
